// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`communication/email-templates/mock usecase CreateTemplate should perform correctly 1`] = `
Object {
  "value": Object {
    "id": "123456789",
    "name": "Station test template",
  },
}
`;

exports[`communication/email-templates/mock usecase GetTemplateContent should perform correctly 1`] = `
Object {
  "value": Object {
    "html": "<!doctype html><html> <head>  <meta name=\\"viewport\\" content=\\"width=device-width\\">  <meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\">  <title>Integration Test Email #1</title></head><body class=\\"\\">This template is used by integration tests only</body></html>",
    "subject": "Integration Test Email #1",
    "text": "This template is used by integration tests only",
  },
}
`;

exports[`communication/email-templates/mock usecase UpdateTemplate should perform correctly 1`] = `
Object {
  "value": Object {
    "id": "123456789",
    "name": "Station test template 2",
  },
}
`;
